feat: VS 챌린지 검색 및 정렬 기능 구현